--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -20,41 +20,48 @@
 
 <body>
   <div class="wrapper">
-    <div class="container-fluid">
-      <!-- ナビゲーションバー -->
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="{{url_for('cpu.index_view')}}">Flask CPU</a>
-        <div class="collapse navbar-collapse justify-content-end">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
-                <img src="static_cpu/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
-                <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">index</a>
-                <a class="dropdown-item" href="{{ url_for('cpu.measure_view',graph_type='temp')}}">CPU</a>
-                <a class="dropdown-item" href="{{ url_for('cpu.weather_view')}}">weather</a>
-                <a class="dropdown-item" href="{{ url_for('cpu.ip_address_view')}}">IP address</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <!-- ナビゲーションバー -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="navbar-brand" href="{{url_for('cpu.index_view')}}">Flask CPU</a>
+        </li>
+      </ul>
 
-      <!-- flash -->
-      {% for message in get_flashed_messages() %}
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {{message}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endfor %}
-      <!--本文 -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
+            <img src="static_cpu/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+          </a>
+        </li>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">MENU</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">index</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.measure_view',graph_type='temp')}}">CPU</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.weather_view')}}">weather</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.ip_address_view')}}">IP address</a>
+            </div>
+          </li>
+        </div>
+      </ul>
+    </nav>
+
+    <!-- flash -->
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{message}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %}
+
+    <!--本文 -->
+    <div class="container-fluid">
       <div class="main_text">
         {% block BODY %}
 
@@ -65,14 +72,14 @@
     <!-- フッター -->
     <footer class="footer">
       <div class="center">
-        <a class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage　</small></a>
-        <a class="heading" href="{{ url_for('cpu.index_view')}}"><small>index　</small></a>
-        <a class="heading" href="{{ url_for('cpu.measure_view',graph_type='temp')}}"><small>CPU　</small></a>
-        <a class="heading" href="{{ url_for('cpu.weather_view')}}"><small>weather　</small></a>
-        <a class="heading" href="{{ url_for('cpu.ip_address_view')}}"><small>IP_address　</small></a>
-      </div>
+        <div class="footer_ul">
+          <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
+          <a style="display: block;" class="heading" href="{{ url_for('cpu.index_view')}}"><small>index</small></a>
+          <a style="display: block;" class="heading" href="{{ url_for('cpu.measure_view',graph_type='temp')}}"><small>CPU</small></a>
+          <a style="display: block;" class="heading" href="{{ url_for('cpu.weather_view')}}"><small>weather</small></a>
+          <a style="display: block;" class="heading" href="{{ url_for('cpu.ip_address_view')}}"><small>IP_address</small></a>
+        </div>
     
-      <div class="center">
         <small>&copy; 2020-<span id="thisYear"></span> Koki</small>
         <script type="text/javascript">
           date = new Date();
