--- a/application/flask_game/templates_game/index_game.html
+++ b/application/flask_game/templates_game/index_game.html
@@ -7,6 +7,7 @@
   <a class="list-group-item list-group-item-action" href="{{ url_for('game.janken_view',type='ml')}}">じゃんけん(機械学習版)</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('game.box_view')}}">箱</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('game.bike_view')}}">bike</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('game.draw_view')}}">draw(開発中)</a>
 </div><br><br>
 
 <nav aria-label="Page navigation">
