--- a/application/flask_math/templates_math/Apart.html
+++ b/application/flask_math/templates_math/Apart.html
@@ -9,10 +9,11 @@
     <label for="InputFormula">式を入力してください</label>
     <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="formula">
   </div><br>
-
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
+<div id="parent"></div>
+<script type="text/javascript" src="static_math/js/button_x.js"></script>
 
 {% if init_flag==0 %}
 <div class="center">
