--- a/application/flask_math/templates_math/sysio.html
+++ b/application/flask_math/templates_math/sysio.html
@@ -1,18 +1,65 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h2><a href="{{url_for('Math.sysio_view')}}" class="heading">システム入出力</a></h2>
-<br>
+<h2 class="left">
+  {% if type=="s" %}
+  <a href="{{url_for('Math.sysio_view',type='s')}}" class="heading">システム入出力(s領域)</a>
+  {% elif type=="t" %}
+  <a href="{{url_for('Math.sysio_view',type='t')}}" class="heading">システム入出力(時間領域)</a>
+  {% endif %}
+</h2>
+<div class="right">
+  <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      選択してください
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="{{url_for('Math.sysio_view',type='s')}}">s領域</a>
+      <a class="dropdown-item" href="{{url_for('Math.sysio_view',type='t')}}">時間領域</a>
+    </div>
+  </div>
+</div><br><br><br>
 
-<form action='{{url_for("Math.sysio_view")}}' method="post" enctype="multipart/form-data">
+<form action="{{url_for('Math.sysio_view',type=type)}}" method="post" enctype="multipart/form-data">
+  {% if type=="s" %}
   <div class="form-group">
     <label for="InputFormula">伝達関数を入力してください</label>
-    <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="TransferFunction">
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text"><small>\(G(s)=\)</small></span>
+      </div>
+      <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="TransferFunction">
+    </div>
   </div>
   <div class="form-group">
     <label for="InputFormula_2">入力を入力してください</label>
-    <input type="text" name="formula_2" class="form-control" id="InputFormula_2" value="{{formula_2}}" placeholder="InputSignal">
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text"><small>\(U(s)=\)</small></span>
+      </div>
+      <input type="text" name="formula_2" class="form-control" id="InputFormula_2" value="{{formula_2}}" placeholder="InputSignal">
+    </div>
   </div>
+  {% elif type=="t" %}
+  <div class="form-group">
+    <label for="InputFormula">インパルス応答を入力してください</label>
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text"><small>\(g(t)=\)</small></span>
+      </div>
+      <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="ImpulseResponse">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="InputFormula_2">入力を入力してください</label>
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text"><small>\(u(t)=\)</small></span>
+      </div>
+      <input type="text" name="formula_2" class="form-control" id="InputFormula_2" value="{{formula_2}}" placeholder="InputSignal">
+    </div>
+  </div>
+  {% endif %}
   <div class="form-group">
     <label for="LowerEnd">定義域を入力してください</label>
     <div class="form-row align-items-center">
@@ -27,13 +74,34 @@
         </div>
       </div>
     </div>
-  </div><br>
+  </div>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
+<div class="accordion" id="accordionExample">
+  <div class="card">
+    <button class="btn btn-outline-secondary btn-block" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">伝達関数</button>
+    {% if init_flag==1 %}
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+    {% else %}
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+    {% endif %}
+      <div id="parent"></div>
+    </div>
+  </div>
+
+  <div class="card">
+    <button class="btn btn-outline-secondary btn-block" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">入力</button>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+      <div id="parent_2"></div>
+    </div>
+  </div>
+</div>
+<script type="text/javascript" src="static_math/js/button_x_2.js"></script>
+
 {% if init_flag==0 %}
 <div class="center">
-  <img src="{{url_for('Math.sysio_graph_png',formula=formula,formula_2=formula_2,lower_end=lower_end,upper_end=upper_end)}}" class="graph"></img>
+  <img src="{{url_for('Math.sysio_graph_png',formula=formula,formula_2=formula_2,lower_end=lower_end,upper_end=upper_end,type=type)}}" class="graph"></img>
 </div>
 {% endif %}
 
