--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -15,12 +15,18 @@
   <!-- スタイルシート -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/mplus1p.css">
   <link rel=stylesheet href="../static_main/css/style.css">
+  <!-- Dark mode CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/bootstrap-dark.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-dark.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-print.min.css" />
+  <script src="../static_main/js/darkmode.js"></script>
   {% block SCRIPT %}
 
   {% endblock%}
 </head>
 
-<body>
+<body id="target" class="bootstrap-dark">
   <div class="wrapper">
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
@@ -29,6 +35,7 @@
           <a class="navbar-brand" href="{{url_for('main.index_view')}}">Flask RaspberryPi</a>
         </li>
       </ul>
+
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
@@ -82,6 +89,13 @@
       </ul>
 
       <div class="center">
+        <label class="switch">
+          <input id="checkbox" type="checkbox" onclick="dataToggle()">
+          <span class="slider round"></span>
+        </label>
+        <p><small>ダークモード切替</small></p>
+      </div>
+      <div class="center">
         <small>&copy; 2020-<span id="thisYear"></span> Koki</small>
         <script type="text/javascript">
           date = new Date();
@@ -92,6 +106,7 @@
           <img src="../static_main/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
         </a>
       </div>
+
     </footer>
 
   </div>
