--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="static_cpu/images/cpu.png">
   <link rel="apple-touch-icon" href="static_cpu/images/cpu.png">
-  <title>Flask_CPU</title>
+  <title>Flask CPU</title>
   <!-- bootstrapのインポート -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -15,12 +15,18 @@
   <!-- スタイルシート -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/mplus1p.css">
   <link rel=stylesheet href="static_cpu/css/style.css">
+  <!-- Dark mode CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/bootstrap-dark.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-dark.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-print.min.css" />
+  <script src="static_cpu/js/darkmode.js"></script>
   {% block SCRIPT %}
 
   {% endblock %}
 </head>
 
-<body>
+<body id="target" class="bootstrap-dark">
   <div class="wrapper">
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
@@ -29,6 +35,7 @@
           <a class="navbar-brand" href="{{url_for('cpu.index_view')}}">Flask CPU</a>
         </li>
       </ul>
+
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
@@ -83,16 +90,24 @@
       </ul>
 
       <div class="center">
+        <label class="switch">
+          <input id="checkbox" type="checkbox" onclick="dataToggle()">
+          <span class="slider round"></span>
+        </label>
+        <p><small>ダークモード切替</small></p>
+      </div>
+      <div class="center">
         <small>&copy; 2020-<span id="thisYear"></span> Koki</small>
         <script type="text/javascript">
           date = new Date();
           thisYear = date.getFullYear();
           document.getElementById("thisYear").innerHTML = thisYear;
         </script>
-        <a class="heading" href="https://github.com/kouki-0926/FlaskMathOnHeroku" target="_blank">
+        <a class="heading" href="https://github.com/kouki-0926" target="_blank">
           <img src="static_cpu/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
         </a>
       </div>
+
     </footer>
 
   </div>
